--- a/blog.html
+++ b/blog.html
@@ -9,6 +9,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <nav class="navigation">
+    <div class="brandname">IAmPriyanshu</div>
+    <ul class="list-non-bullet navpills">
+      <li class="list-inline ">
+        <a class="link link-active " href="/">home</a>
+      </li>
+      <li class="list-inline"><a class="link " href="project.html">projects</a></li>
+      <li class="list-inline"><a class="link " href="blog.html">blogs</a></li>
+    </ul>
+  </nav>
   
        <header class="hero">
         <img class = "hero-img-blog"  src="img/blogheader.svg" alt="">
