--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@
         <section class="section">
           <div class="container-center">
             <h1>blogs</h1>
-            <p>I am also working on some technical and non techincal blogs. I like to document my journey of learning.
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
              </p>
             <a class="link link-primary" href="blog.html"> Read Blog </a>
           </div>
@@ -37,7 +37,7 @@
         <section class="section">
           <div class="container-center">
             <h1>blogs</h1>
-            <p>I am also working on some technical and non techincal blogs. I like to document my journey of learning.
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
              </p>
             <a class="link link-primary" href="blog.html"> Read Blog </a>
           </div>
@@ -47,7 +47,7 @@
         <section class="section">
           <div class="container-center">
             <h1>blogs</h1>
-            <p>I am also working on some technical and non techincal blogs. I like to document my journey of learning.
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
              </p>
             <a class="link link-primary" href="blog.html"> Read Blog </a>
           </div>
