--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <div>
       <div class="container-center">
-        <hr width="590px">
+        <!-- <hr width="590px"> -->
       </div>
       <div class="copyright">
         <small style="font-weight: 700; font-size: medium;">made with <i class="fas fa-heart foot-icon"></i> Priyanshu </small>
