--- a/project.html
+++ b/project.html
@@ -18,7 +18,13 @@
                 <li class="list-inline"><a class = "link link-active" href="/">projects</a></li>
                 <li class="list-inline"><a class = "link " href="/">blogs</a></li>
             </ul>
-       </nav>  
+       </nav> 
+       
+       <header class="hero">
+        <img class = "hero-img-blog"  src="img/project.svg" alt="">
+        <h1 class="hero-header">Checkout my <span class="hero-inverted">Projects</span></h1>
+       </header>
+
        <footer class="footer">
     
         <ul class="list-non-bullet">
