--- a/project.html
+++ b/project.html
@@ -32,7 +32,8 @@
       <h1>blogs</h1>
       <p>I am also working on some technical and non techincal blogs. I like to document my journey of learning.
       </p>
-      <a class="link link-primary" href="blog.html"> Read Blog </a>
+      <a class="link link-primary" href="blog.html"> Live Project </a>
+      <a  class="link link-secondary"  href="">See Code</a>
     </div>
   </section>
   <section class="section">
@@ -40,7 +41,8 @@
       <h1>blogs</h1>
       <p>I am also working on some technical and non techincal blogs. I like to document my journey of learning.
       </p>
-      <a class="link link-primary" href="blog.html"> Read Blog </a>
+      <a class="link link-primary" href="blog.html"> Live Project </a>
+      <a  class="link link-secondary"  href="">See Code</a>
     </div>
   </section>
   <section class="section">
@@ -48,7 +50,8 @@
       <h1>blogs</h1>
       <p>I am also working on some technical and non techincal blogs. I like to document my journey of learning.
       </p>
-      <a class="link link-primary" href="blog.html"> Read Blog </a>
+      <a class="link link-primary" href="blog.html"> Live Project </a>
+      <a  class="link link-secondary"  href="">See Code</a>
     </div>
   </section>
   <section class="section">
@@ -56,22 +59,26 @@
       <h1>blogs</h1>
       <p>I am also working on some technical and non techincal blogs. I like to document my journey of learning.
       </p>
-      <a class="link link-primary" href="blog.html"> Read Blog </a>
+      <a class="link link-primary" href="blog.html"> Live Project </a>
+      <a  class="link link-secondary"  href="">See Code</a>
     </div>
   </section>
   <section class="section">
     <div class="container-center">
-      <h1>blogs</h1>
-      <p>I am also working on some technical and non techincal blogs. I like to document my journey of learning.
-      </p>
-      <a class="link link-primary" href="blog.html"> Read Blog </a>
+      <h1>Profit And Loss</h1>
+      <p>I am also working on some technical and non techincal blogs. I like to document my journey of learning.</p>
+
+      <a class="link link-primary" href="blog.html"> Live Project </a>
+      <a class="link link-secondary" href="blog.html"> Live Project </a>
+
     </div>
   </section><section class="section">
     <div class="container-center">
       <h1>blogs</h1>
       <p>I am also working on some technical and non techincal blogs. I like to document my journey of learning.
       </p>
-      <a class="link link-primary" href="blog.html"> Read Blog </a>
+      <a class="link link-primary" href="blog.html"> Live Project </a>
+      <a  class="link link-secondary"  href="">See Code</a>
     </div>
   </section>
 
