--- a/blog.html
+++ b/blog.html
@@ -14,10 +14,10 @@
     <div class="brandname">IAmPriyanshu</div>
     <ul class="list-non-bullet navpills">
       <li class="list-inline ">
-        <a class="link" href="/">home</a>
+        <a class="link" href="index.html">home</a>
       </li>
       <li class="list-inline"><a class="link " href="project.html">projects</a></li>
-      <li class="list-inline"><a class="link  link-active" href="blog.html">blogs</a></li>
+      <li class="list-inline"><a class="link  link-active" href="/">blogs</a></li>
     </ul>
   </nav>
        <header class="hero">
