--- a/project.html
+++ b/project.html
@@ -16,10 +16,10 @@
     <div class="brandname">IAmPriyanshu</div>
     <ul class="list-non-bullet navpills">
       <li class="list-inline ">
-        <a class="link  " href="/">home</a>
+        <a class="link  " href="index.html">home</a>
       </li>
       <li class="list-inline"><a class="link link-active" href="/">projects</a></li>
-      <li class="list-inline"><a class="link " href="/">blogs</a></li>
+      <li class="list-inline"><a class="link " href="blog.html">blogs</a></li>
     </ul>
   </nav>
 
