--- a/project.html
+++ b/project.html
@@ -27,57 +27,99 @@
     <img class="hero-img-blog" src="img/project.svg" alt="">
     <h1 class="hero-header">Checkout my <span class="hero-inverted">Projects</span></h1>
   </header>
-  <section class="section">
-    <div class="container-center">
-      <h1>blogs</h1>
-      <p>I am also working on some technical and non techincal blogs. I like to document my journey of learning.
-      </p>
-      <a class="link link-primary" href="blog.html"> Live Project </a>
-      <a  class="link link-secondary"  href="">See Code</a>
-    </div>
-  </section>
-  <section class="section">
-    <div class="container-center">
-      <h1>blogs</h1>
-      <p>I am also working on some technical and non techincal blogs. I like to document my journey of learning.
-      </p>
-      <a class="link link-primary" href="blog.html"> Live Project </a>
-      <a  class="link link-secondary"  href="">See Code</a>
-    </div>
-  </section>
-  <section class="section">
-    <div class="container-center">
-      <h1>blogs</h1>
-      <p>I am also working on some technical and non techincal blogs. I like to document my journey of learning.
-      </p>
-      <a class="link link-primary" href="blog.html"> Live Project </a>
-      <a  class="link link-secondary"  href="">See Code</a>
-    </div>
-  </section>
-  <section class="section">
-    <div class="container-center">
-      <h1>blogs</h1>
-      <p>I am also working on some technical and non techincal blogs. I like to document my journey of learning.
-      </p>
-      <a class="link link-primary" href="blog.html"> Live Project </a>
-      <a  class="link link-secondary"  href="">See Code</a>
-    </div>
-  </section>
-  <section class="section">
-    <div class="container-center">
-      <h1>Profit And Loss</h1>
-      <p>I am also working on some technical and non techincal blogs. I like to document my journey of learning.</p>
 
-      <a class="link link-primary" href="blog.html"> Live Project </a>
+</section><section class="section">
+  <div class="container-center">
+    <h1>Profit Loss Calculator</h1>
+    <p>A website which helps user how much profit or loss he/she is making in percentage & absolute value.</p>
+    <a class="link link-primary" href="https://stock-calculator-neogcamp.netlify.app/" target="_blank"> Live Project </a>
+    <a  class="link link-secondary"  href="">See Code</a>
+  </div>
+</section>
+
+</section><section class="section">
+  <div class="container-center">
+    <h1>Palindrome Birthdays</h1>
+    <p>App which checks whether your birthday is a palindrome birthday or not.</p>
+    <a class="link link-primary" href="https://isyour-birthdaypalindrome.netlify.app/" target="_blank" > Live Project </a>
+    <a  class="link link-secondary"  href="">See Code</a>
+  </div>
+</section>
+
+</section><section class="section">
+  <div class="container-center">
+    <h1>Fun with Triangles</h1>
+    <p>A website which helps you to learn about triangles </p>
+    <a class="link link-primary" href="https://traingle-quiz.netlify.app/" target = "_blank"> Live Project </a>
+    <a  class="link link-secondary"  href="">See Code</a>
+  </div>
+</section>
+
+</section><section class="section">
+  <div class="container-center">
+    <h1>Is Your Birthday Lucky</h1>
+    <p>A website which can help you to check whether your birthday is lucky or not. </p>
+    <a class="link link-primary" href="https://isyour-birthdaylucky.netlify.app/" target="_blank"> Live Project </a>
+    <a  class="link link-secondary"  href="">See Code</a>
+  </div>
+</section>
+
+</section><section class="section">
+  <div class="container-center">
+    <h1>Cash Register Manager</h1>
+    <p>A cash register manager which helps the user by telling how can he/she return the change to the customer with minimum number of notes.. </p>
+    <a class="link link-primary" href="https://cash-register-app-neogcamp.netlify.app/" target="_blank"> Live Project </a>
+    <a  class="link link-secondary"  href="">See Code</a>
+  </div>
+</section>
+
+
+  <section class="section">
+    <div class="container-center">
+      <h1>Music recommendation app</h1>
+      <p>A ReactJS which recommend some good albums of different genre.</p>
+      <a class="link link-primary" href="https://5p5gc.csb.app/" target="_blank">  Live Project </a>
+      <a  class="link link-secondary"  href="">See Code</a>
+    </div>
+  </section>
+  <section class="section">
+    <div class="container-center">
+      <h1>Emoji Interpreter</h1>
+      <p>A ReactJS app which interprete Emoji when click on it. </p>
+      <a class="link link-primary" href="https://bw743.csb.app/" target="_blank"> Live Project </a>
+      <a  class="link link-secondary"  href="">See Code</a>
+    </div>
+  </section>
+  <section class="section">
+    <div class="container-center">
+      <h1>Are you a Pirate</h1>
+      <p>This is a web app which translate language to Pirates language.</p>
+      <a class="link link-primary" href="https://talk-to-pirate.netlify.app/" target="_blank"> Live Project </a>
+      <a  class="link link-secondary"  href="">See Code</a>
+    </div>
+  </section>
+  <section class="section">
+    <div class="container-center">
+      <h1>Minions Speaks</h1>
+      <p> This is a web app which translate language to minions language. </p>
+      <a class="link link-primary" href="https://minion-talk-app.netlify.app/" target="_blank"> Live Project </a>
+      <a  class="link link-secondary"  href="">See Code</a>
+    </div>
+  </section>
+  <section class="section">
+    <div class="container-center">
+      <h1>have you watch  One Piece  anime.</h1>
+      <p> are you a one piece fan ?. take a quiz know how well you konw about it. </p>
+
+      <a class="link link-primary" href="blog.html"  target="_blank"> Live Project </a>
       <a class="link link-secondary" href="blog.html"> Live Project </a>
 
     </div>
   </section><section class="section">
     <div class="container-center">
-      <h1>blogs</h1>
-      <p>I am also working on some technical and non techincal blogs. I like to document my journey of learning.
-      </p>
-      <a class="link link-primary" href="blog.html"> Live Project </a>
+      <h1>Do You Know Me ?</h1>
+      <p>A CLI app built with nodeJS. Quiz about how well do you know me. </p>
+      <a class="link link-primary" href="blog.html" target="_blank"> Live Project </a>
       <a  class="link link-secondary"  href="">See Code</a>
     </div>
   </section>
