--- a/project.html
+++ b/project.html
@@ -119,7 +119,7 @@
     <div class="container-center">
       <h1>Do You Know Me ?</h1>
       <p>A CLI app built with nodeJS. Quiz about how well do you know me. </p>
-      <a class="link link-primary" href="blog.html" target="_blank"> Live Project </a>
+      <a class="link link-primary" href="https://replit.com/@PriyanshuShriva/Do-you-Know-me-Quiz?embed=1&output=1#index.js" target="_blank"> Live Project </a>
       <a  class="link link-secondary"  href="">See Code</a>
     </div>
   </section>
