--- a/project.html
+++ b/project.html
@@ -130,12 +130,12 @@
 
   <footer class="footer">
     <ul class="list-non-bullet">
-      <li class="list-inline"><a class="link" href=""><i class="fab fa-instagram"></i> &nbsp;&nbsp; Instagram</a>
+      <li class="list-inline"><a class="link" href=""><i class="fab fa-instagram"></i> &nbsp; Instagram</a>
       </li>
       <li class="list-inline"><a class="link " href="https://github.com/almight3" target="_blank"> <i
-            class="fab fa-github"></i>&nbsp;&nbsp; Github</a> </li>
+            class="fab fa-github"></i>&nbsp; Github</a> </li>
       <li class="list-inline"><a class="link " href="https://www.linkedin.com/in/priyanshu-shrivastava-9b4ba1160/"
-          target="_blank"><i class="fab fa-linkedin"></i>&nbsp;&nbsp; LinkedIn</a></li>
+          target="_blank"><i class="fab fa-linkedin"></i>&nbsp; LinkedIn</a></li>
     </ul>
     <div>
       <div class="container-center">
