--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
 
     <ul class="list-non-bullet">
 
-      <li class="list-inline"><a class="link" href=""><i class="fab fa-instagram"></i> &nbsp; Instagram</a> </li>
+      <li class="list-inline"><a class="link" href=""><i class="fab fa-instagram"></i> Instagram</a> </li>
       <li class="list-inline"><a class="link " href="https://github.com/almight3" target="_blank"> <i
-            class="fab fa-github"></i>&nbsp; Github</a> </li>
+            class="fab fa-github"></i> Github</a> </li>
       <li class="list-inline"><a class="link " href="https://www.linkedin.com/in/priyanshu-shrivastava-9b4ba1160/"
-          target="_blank"><i class="fab fa-linkedin"></i>&nbsp;LinkedIn</a></li>
+          target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
     </ul>
 
     <div>
