--- a/project.html
+++ b/project.html
@@ -111,7 +111,7 @@
       <h1>have you watch  One Piece  anime.</h1>
       <p> are you a one piece fan ?. take a quiz know how well you konw about it. </p>
 
-      <a class="link link-primary" href="blog.html"  target="_blank"> Live Project </a>
+      <a class="link link-primary" href="https://replit.com/@PriyanshuShriva/anime-quiz?embed=1&output=1#index.js"  target="_blank"> Live Project </a>
       <a class="link link-secondary" href="blog.html"> Live Project </a>
 
     </div>
