--- a/project.html
+++ b/project.html
@@ -33,7 +33,7 @@
     <h1>Profit Loss Calculator</h1>
     <p>A website which helps user how much profit or loss he/she is making in percentage & absolute value.</p>
     <a class="link link-primary" href="https://stock-calculator-neogcamp.netlify.app/" target="_blank"> Live Project </a>
-    <a  class="link link-secondary"  href="">See Code</a>
+    <a  class="link link-secondary"  href="https://github.com/almight3/Stock-Calculator" target="_blank">See Code</a>
   </div>
 </section>
 
@@ -42,7 +42,7 @@
     <h1>Palindrome Birthdays</h1>
     <p>App which checks whether your birthday is a palindrome birthday or not.</p>
     <a class="link link-primary" href="https://isyour-birthdaypalindrome.netlify.app/" target="_blank" > Live Project </a>
-    <a  class="link link-secondary"  href="">See Code</a>
+    <a  class="link link-secondary"  href="https://github.com/almight3/isYourBirthdayPalindrome" target="_blank">See Code</a>
   </div>
 </section>
 
@@ -51,7 +51,7 @@
     <h1>Fun with Triangles</h1>
     <p>A website which helps you to learn about triangles </p>
     <a class="link link-primary" href="https://traingle-quiz.netlify.app/" target = "_blank"> Live Project </a>
-    <a  class="link link-secondary"  href="">See Code</a>
+    <a  class="link link-secondary"  href="https://github.com/almight3/FunWithTraingle" target="_blank">See Code</a>
   </div>
 </section>
 
@@ -60,7 +60,7 @@
     <h1>Is Your Birthday Lucky</h1>
     <p>A website which can help you to check whether your birthday is lucky or not. </p>
     <a class="link link-primary" href="https://isyour-birthdaylucky.netlify.app/" target="_blank"> Live Project </a>
-    <a  class="link link-secondary"  href="">See Code</a>
+    <a  class="link link-secondary"  href="https://github.com/almight3/isYourBirthdayLucky" target="_blank">See Code</a>
   </div>
 </section>
 
@@ -69,7 +69,7 @@
     <h1>Cash Register Manager</h1>
     <p>A cash register manager which helps the user by telling how can he/she return the change to the customer with minimum number of notes.. </p>
     <a class="link link-primary" href="https://cash-register-app-neogcamp.netlify.app/" target="_blank"> Live Project </a>
-    <a  class="link link-secondary"  href="">See Code</a>
+    <a  class="link link-secondary"  href="https://github.com/almight3/Cash-Register" target="_blank">See Code</a>
   </div>
 </section>
 
@@ -79,7 +79,7 @@
       <h1>Music recommendation app</h1>
       <p>A ReactJS which recommend some good albums of different genre.</p>
       <a class="link link-primary" href="https://5p5gc.csb.app/" target="_blank">  Live Project </a>
-      <a  class="link link-secondary"  href="">See Code</a>
+      <a  class="link link-secondary"  href="https://github.com/almight3/Music-recommendation-app" target="_blank">See Code</a>
     </div>
   </section>
   <section class="section">
@@ -87,7 +87,7 @@
       <h1>Emoji Interpreter</h1>
       <p>A ReactJS app which interprete Emoji when click on it. </p>
       <a class="link link-primary" href="https://bw743.csb.app/" target="_blank"> Live Project </a>
-      <a  class="link link-secondary"  href="">See Code</a>
+      <a  class="link link-secondary"  href="https://github.com/almight3/Emoji-Interpreter" target="_blank">See Code</a>
     </div>
   </section>
   <section class="section">
@@ -95,7 +95,7 @@
       <h1>Are you a Pirate</h1>
       <p>This is a web app which translate language to Pirates language.</p>
       <a class="link link-primary" href="https://talk-to-pirate.netlify.app/" target="_blank"> Live Project </a>
-      <a  class="link link-secondary"  href="">See Code</a>
+      <a  class="link link-secondary"  href="https://github.com/almight3/Ferb-latin-translator" target="_blank">See Code</a>
     </div>
   </section>
   <section class="section">
@@ -103,7 +103,7 @@
       <h1>Minions Speaks</h1>
       <p> This is a web app which translate language to minions language. </p>
       <a class="link link-primary" href="https://minion-talk-app.netlify.app/" target="_blank"> Live Project </a>
-      <a  class="link link-secondary"  href="">See Code</a>
+      <a  class="link link-secondary"  href="https://github.com/almight3/banana-app" target="_blank">See Code</a>
     </div>
   </section>
   <section class="section">
@@ -112,7 +112,7 @@
       <p> are you a one piece fan ?. take a quiz know how well you konw about it. </p>
 
       <a class="link link-primary" href="https://replit.com/@PriyanshuShriva/anime-quiz?embed=1&output=1#index.js"  target="_blank"> Live Project </a>
-      <a class="link link-secondary" href="blog.html"> Live Project </a>
+      <a class="link link-secondary" href="https://github.com/almight3/have-you-watch-One-Piece-anime." target="_blank"> See Code </a>
 
     </div>
   </section><section class="section">
@@ -120,7 +120,7 @@
       <h1>Do You Know Me ?</h1>
       <p>A CLI app built with nodeJS. Quiz about how well do you know me. </p>
       <a class="link link-primary" href="https://replit.com/@PriyanshuShriva/Do-you-Know-me-Quiz?embed=1&output=1#index.js" target="_blank"> Live Project </a>
-      <a  class="link link-secondary"  href="">See Code</a>
+      <a  class="link link-secondary"  href="https://github.com/almight3/Do-You-Know-Me--" target="_blank">See Code</a>
     </div>
   </section>
 
