--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <p>I like to showcase my work and thus, you can see my projects hosted online
       </p>
       <div>
-        <a class="link link-primary" href="/"> See projects </a>
+        <a class="link link-primary" href="project.html"> See projects </a>
 
       </div>
 
