--- a/project.html
+++ b/project.html
@@ -108,6 +108,14 @@
   </section>
   <section class="section">
     <div class="container-center">
+      <h1>Portfolio Website</h1>
+      <p> This is my portfolio website where i show projest i builds and blogs i write . </p>
+      <a class="link link-primary" href="https://priyansu-shrivastava-portfolio.netlify.app/" target="_blank"> Live Project </a>
+      <a  class="link link-secondary"  href="https://github.com/almight3/Priyanshu-Portfolio" target="_blank">See Code</a>
+    </div>
+  </section>
+  <section class="section">
+    <div class="container-center">
       <h1>have you watch  One Piece  anime.</h1>
       <p> are you a one piece fan ?. take a quiz know how well you konw about it. </p>
 
