--- a/CallBacksAndArrayMethod.html
+++ b/CallBacksAndArrayMethod.html
@@ -38,7 +38,7 @@
 
         <h4>Example</h4>
         <img src="./blog/callback/map.png" class="blog-img">
-        <p>Here we create an array(arr) and callback function(square) and another array(square Root) in which we're using map() function. When code executes, map() calls a (square) function for every value present in a (arr) and maps the value returned by the square function at the same index in (square Root).The first map() function calls the (square) function for the value on the first index of (arr) The (square) takes the value on the first index as an argument and returns the value, and the map() will map that square value to (square Root) at the same index. These steps are kept repeating until the last value in (arr).</p>    
+        <p>Here we create an array(arr) and callback function(square) and another array(square) in which we're using map() function. When code executes, map() calls a (square) function for every value present in a (arr) and maps the value returned by the square function at the same index in (square).The first map() function calls the (square) function for the value on the first index of (arr) The (square) takes the value on the first index as an argument and returns the value, and the map() will map that square value to (square) at the same index. These steps are kept repeating until the last value in (arr).</p>    
 
         <h3>2. Filter()</h3>
         <p>The filter() function almost works the same as a map() function, but the only difference is that whatever callback function is passed in the filter() function, that callback function returns a boolean value. So whenever the callback function returns true for a value, it maps it to the new array, and if it returns false then that value will not be mapped to the new array.</p>
