--- a/CallBacksAndArrayMethod.html
+++ b/CallBacksAndArrayMethod.html
@@ -38,7 +38,7 @@
 
         <h4>Example</h4>
         <img src="./blog/callback/map.png" class="blog-img">
-        <p>Here we create an array(arr) and callback function(square) and another array(squareNumber) in which we're using map() function. When code executes, map() calls a (square) function for every value present in an (arr) and maps the value returned by the square function at the same index in (square). When map() function calls the (square) function for the value on the first index of (arr),   (square) takes the value on the first index as an argument and returns the value, and the map() will map that square value to (squareNumber) at the same index. These steps are kept repeating until the last value in (arr).
+        <p>Here we create an array(arr) and callback function(square) and another array(squareNumber) in which we're using map() function. When code executes, map() calls a (square) function for every value present in an (arr) and maps the value returned by the square function at the same index in (squareNumber). When map() function calls the (square) function for the value on the first index of (arr),   (square) takes the value on the first index as an argument and returns the value, and the map() will map that square value to (squareNumber) at the same index. These steps are kept repeating until the last value in (arr).
         </p>    
 
         <h3>2. Filter()</h3>
